# short-term1-homework

./: KMeans.py  README.md  ai_mod.py  aver.py  data.py  kmeans0.py  kmeans1.py  kmeans1yuce.py  kmeans2.py  main.py  pyproject.toml  requirements.txt  业务流程图.drawio
data_resource/: data_loader.py
